deadlifter image responsive; fix footer for mobile width; fix gap between about and footer for tablet width

--- a/partials/_responsive.sass
+++ b/partials/_responsive.sass
@@ -45,15 +45,19 @@
   .nav-link-narrow
     display: none
 
+@media (max-width: 1071px)
+  #slideshow-img-3
+    width: 1100px
+
 @media (max-width: 768px)
   .dropdown-content-narrow
     grid-template-columns: 1fr 1fr
     width: 400px
-  .about-text
-    padding: 20px
-
+  #slideshow-img-3
+    width: 900px
+  
 @media (max-width: 510px)
-  #top-bar-text
+  .top-bar-text
     display: none
   .widgets-container 
     width: 100%
@@ -65,8 +69,14 @@
     padding-top: 16px
   .widget-text
     padding-left: 20px
+  .about-text
+    padding: 20px
   .trainer-container
     grid-template-columns: 1fr
+  .footer-container
+    padding: 20px
+  .footer-label
+    font-size: 16px
 
 @media (max-width: 410px)
   .dropdown-content-narrow
